# glyph

./: .gitignore  AAA.glyph  ABC.glyph  Cargo.toml  LICENSE  README.md  Untitled.glyph  untitled.glyph  untitled_glyph.glyph
src/: app.rs  db.rs  dialog.rs  drawer.rs  event_handler.rs  focus_handler.rs  layout.rs  main.rs  markdown.rs  markdown_renderer.rs  model.rs  models.rs  page.rs  popup.rs  services.rs  state.rs  theme.rs  ui.rs  utils.rs  widget.rs
src/app/: app_states.rs  dialog.rs  entrance.rs  focus_handler.rs  page.rs  popup.rs  states.rs  view_states.rs  views.rs  widget.rs  widget_states.rs  widgets.rs
src/dialog/: confirm_dialog.rs  number_input_dialog.rs  text_input_dialog.rs
src/drawer/: dialog.rs  entrance.rs  page.rs  popup.rs  widget.rs
src/event_handler/: dialog.rs  dialog_events.rs  entrance.rs  page.rs  page_events.rs  popup.rs  popups_events.rs  widget.rs
src/focus_handler/: dialog.rs  page.rs  popup.rs  widget.rs
src/layout/: dialog_layouts.rs  page_layouts.rs  popup_layouts.rs  widget_layouts.rs
src/model/: entry.rs  layout.rs  section.rs
src/models/: entry.rs  layout.rs  section.rs
src/page/: create_glyph_page.rs  entrance_page.rs  glyph_edit_view.rs  glyph_layout_view.rs  glyph_page.rs  glyph_read_view.rs  glyph_viewer.rs  open_glyph_page.rs
src/popup/: confirm_popup.rs  message_popup.rs
src/state/: dialog.rs  page.rs  widget.rs
src/ui/: dialog_layouts.rs  page_layouts.rs  popup_layouts.rs  widget_layouts.rs  widgets.rs
src/utils/: markdown_renderer.rs
src/widget/: button.rs  directory_list.rs  line_button.rs  (+4 more)
(+23 files in other folders)
