[package]
name = "glyph"
version = "0.2.0"
edition = "2024"

[dependencies]
# Core
ratatui = "0.30.0"
crossterm = "0.29.0"
pulldown-cmark = "0.13.0"

# Error
color-eyre = "0.6.5"

# Widget
tui-big-text = "0.8.1"
tui-scrollview = "0.6.2"

# Database
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
bitflags = "2.10.0"
log = "0.4.29"
